# qlogic

./: Makefile  Qlogic.cabal  folkung-warnings.patch  prepareFolkung.sh  qlogic.cabal
Qlogic/: ArcSat.hs  Arctic.hs  Assign.hs  Boolean.hs  BzSat.hs  Cnf.hs  Diophantine.hs  Formula.hs  IntSat.hs  MemoizedFormula.hs  MiniSat.hs  NatSat.hs  PropositionalFormula.hs  SatSolver.hs  SatSolverHash.hs  SatSolverMap.hs  Semiring.hs  Test.hs  Tseitin.hs  Utils.hs
Qlogic/Formula/: NoLaw.hs
Qlogic/Test/: ArcSat.hs  BzSat.hs  Diophantine.hs  IntSat.hs  Main.hs  NatSat.hs
