name:               Qlogic
version:            0.1
synopsis:           Propositional Logic
description:
  An interface to the MiniSat SAT solver
author:             The Authors
maintainer:         nobody@nodomain.at
license:            LGPL
cabal-version:      >= 1.6
build-type:	    Simple


library
 exposed-modules:   Qlogic.Formula
                    Qlogic.Assign
                    Qlogic.SatSolver
                    Qlogic.NatSat
                    Qlogic.Diophantine
                    Qlogic.Cnf
                    Qlogic.Utils

 other-modules:     Sat
                    Name
                    Str
                    Form

 build-depends:     containers, mtl, base>=4.0.0.0, pretty, syb

 extensions:        CPP
                    ForeignFunctionInterface
                    Generics
                    TypeOperators
                    GeneralizedNewtypeDeriving
                    OverlappingInstances

 extra-lib-dirs:    Folkung/instantiate
                    Folkung/minisat/mtl
                    Folkung/minisat/current-base

 extra-libraries:   stdc++
                    instantiate
                    minisat

 hs-source-dirs:    .
                    Folkung/Haskell

 ghc-options:       -O2

executable qlogic-test
 main-is:           Qlogic/Test/Main.hs

 build-depends:     containers, mtl, base>=4.0.0.0, QuickCheck, pretty, syb

 other-modules:     Qlogic.Formula
                    Qlogic.Assign
                    Qlogic.SatSolver
                    Qlogic.NatSat
                    Qlogic.Diophantine
                    Qlogic.Cnf
                    Qlogic.Utils
                    Sat
                    Name
                    Str
                    Form

 hs-source-dirs:    .
                    Folkung/Haskell

 extra-lib-dirs:    Folkung/instantiate
                    Folkung/minisat/mtl
                    Folkung/minisat/current-base

 extra-libraries:   stdc++
                    instantiate
                    minisat

 extensions:        CPP
                    ForeignFunctionInterface
                    Generics
                    TypeOperators
                    GeneralizedNewtypeDeriving
                    OverlappingInstances

 ghc-options:       -O2
