name:               Qlogic
version:            0.1
synopsis:           Propositional Logic
description:
  An interface to the MiniSat SAT solver
author:             The Authors
maintainer:         nobody@nodomain.at
license:            LGPL
cabal-version:      >= 1.6
build-type:	    Simple


library
 exposed-modules:   Qlogic.Formula
                    Qlogic.Assign
                    Qlogic.SatSolver
                    Qlogic.MiniSat
                    Qlogic.NatSat
                    Qlogic.Boolean
                    Qlogic.Diophantine
                    Qlogic.MemoizedFormula
                    Qlogic.PropositionalFormula

 other-modules:     Qlogic.Utils

 build-depends:     containers, mtl, base>=4.0.0.0, pretty, syb, folkung

 ghc-options:       -O2 -fvia-C