name:               Qlogic
version:            0.1
synopsis:           Propositional Logic
description:
  An interface to the MiniSat SAT solver
author:             The Authors
maintainer:         nobody@nodomain.at
license:            LGPL
cabal-version:      >= 1.6
build-type:         Simple


library
 exposed-modules:   Qlogic.Arctic
                    Qlogic.ArcSat
                    Qlogic.BzSat
                    Qlogic.Semiring
                    Qlogic.Formula
                    Qlogic.Formula.NoLaw
                    Qlogic.Assign
                    Qlogic.SatSolver
                    Qlogic.MiniSat
                    Qlogic.NatSat
                    Qlogic.IntSat
                    Qlogic.Boolean
                    Qlogic.Diophantine
                    Qlogic.MemoizedFormula
                    Qlogic.PropositionalFormula

 other-modules:     Qlogic.Utils

 build-depends:     containers, mtl, base>=4.0.0.0, pretty, syb, folkung, parallel

 ghc-options:       -O2 -fvia-C